# playscript

./: .gitignore  Cargo.toml  README.md
examples/: stack_probe.rs
src/: ast.rs  error.rs  interp.rs  lexer.rs  lib.rs  main.rs  map.rs  parser.rs  trace.rs  value.rs
tests/: arrays.rs  control_flow.rs  expressions.rs  first_class.rs  fuel.rs  functions.rs  maps.rs  strings.rs  trace.rs
tests/common/: mod.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: CLAUDE.md  README.md  package.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
web/src/: app.d.ts
web/src/lib/: engine.ts
web/src/routes/: +page.svelte  +page.ts
