[package]
name = "playscript-wasm"
version = "1.1.0"
edition = "2024"

[lib]
# cdylib: the wasm artifact. rlib: so the JSON logic is testable natively.
crate-type = ["cdylib", "rlib"]

# wasm-opt (size optimization) fetches and runs an external binary; keep the
# build hermetic by skipping it. Remove this block for smaller prod bundles.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
playscript = { path = ".." }
# Pinned to the installed wasm-bindgen CLI so wasm-pack reuses it instead of
# rebuilding a matching CLI from scratch.
wasm-bindgen = "=0.2.108"
serde_json = "1"
